--- a/kube.yaml
+++ b/kube.yaml
@@ -7,7 +7,7 @@ spec:
   ports:
   - name: maven
     port: 8080
-    nodePort: 31002
+    nodePort: 31012
     targetPort: 8080
     protocol: TCP
   selector:
@@ -16,7 +16,7 @@ spec:
 apiVersion: extensions/v1beta1
 kind: Deployment
 metadata:
-  name: maven-deployment
+  name: maven-deployments
 spec:
   replicas: 1
   template:
@@ -26,7 +26,7 @@ spec:
     spec:
       containers:
         - name: maven
-          image: 192.168.0.108:5000/maven:latest
+          image: 10.100.26.151:5000/maven:latest
           ports:
           - containerPort: 8080
           env:
